--- a/templates/home.html
+++ b/templates/home.html
@@ -64,7 +64,7 @@
         }
 
         .view {
-            background: url("https://honestchops.com/wp-content/uploads/2014/05/DSC_0099.jpg")
+            background: url("http://mylatinatable.com/wp-content/uploads/2016/02/guacamole-foto-heroe.jpg")
             no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
@@ -103,9 +103,6 @@
                 <ul class="nav navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#abouto">Featured</a>
                     </li>
 
                     <form class="form-inline"  action="/display/" method="post">
@@ -168,173 +165,10 @@
         <!--Section: About-->
         <section id="about" class="text-xs-center wow bounceIn" data-wow-delay="0.2s">
 
-            <p>We believe — and medical studies prove — that the best way to lose weight and keep it off is to simply keep track of the foods you eat. Gimmicky machines and fad diets don't work, so we designed a free website and mobile apps that make calorie counting and food tracking easy. </p>
+            <p>We believe — and medical studies prove — that the best way to lose weight and keep it off is to simply keep track of the foods you eat. Gimmicky machines and fad diets don't work, so we designed a free website that makes calorie counting and food tracking easy. </p>
 
         </section>
         <!--Section: About-->
-
-        <div class="divider-new">
-            <h2 class="h2-responsive wow fadeInDown">Best features</h2>
-        </div>
-
-        <!--Section: Best features-->
-        <section id="best-features">
-
-            <div class="row">
-
-                <!--First columnn-->
-                <div class="col-lg-3">
-                    <!--Card-->
-                    <div class="card wow fadeInUp">
-
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="http://5dwallpaper.com/wp-content/uploads/2016/07/food-wallpaper5.jpg" class="img-fluid" alt="">
-                            <a>
-                                <div class="mask"></div>
-                            </a>
-                        </div>
-                        <!--/.Card image-->
-
-                        <!--Card content-->
-                        <div class="card-block text-xs-center">
-                            <!--Title-->
-                            <h4 class="card-title">Shish Kabob</h4>
-                            <hr>
-                            <!--Text-->
-                            <p class="card-text">A dish consisting of pieces of seasoned meat and sometimes vegetables roasted on skewers and served with condiments.</p>
-                        </div>
-                        <!--/.Card content-->
-
-                    </div>
-                    <!--/.Card-->
-                </div>
-                <!--First columnn-->
-
-                <!--Second columnn-->
-                <div class="col-lg-3">
-                    <!--Card-->
-                    <div class="card wow fadeInUp" data-wow-delay="0.2s">
-
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="http://a.hilanddairy.envoydev.com/sites/default/files/recipe_fried_chicken.jpg" class="img-fluid" alt="">
-                            <a>
-                                <div class="mask"></div>
-                            </a>
-                        </div>
-                        <!--/.Card image-->
-
-                        <!--Card content-->
-                        <div class="card-block text-xs-center">
-                            <!--Title-->
-                            <h4 class="card-title">Buttermilk Fried Chicken</h4>
-                            <hr>
-                            <!--Text-->
-                            <p class="card-text">Chicken pieces floured or battered and then dipped in buttermilk before being pan-fried, deep fried, or pressure fried. The breading and coating adds a crisp coating or crust and added flavor to the exterior.</p>
-                        </div>
-                        <!--/.Card content-->
-
-                    </div>
-                    <!--/.Card-->
-                </div>
-                <!--Second columnn-->
-
-                <!--Third columnn-->
-                <div class="col-lg-3">
-                    <!--Card-->
-                    <div class="card wow fadeInUp" data-wow-delay="0.4s">
-
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="https://s-media-cache-ak0.pinimg.com/736x/26/0f/49/260f49edb64b3f858d77659c4ba72388.jpg" class="img-fluid" alt="">
-                            <a>
-                                <div class="mask"></div>
-                            </a>
-                        </div>
-                        <!--/.Card image-->
-
-                        <!--Card content-->
-                        <div class="card-block text-xs-center">
-                            <!--Title-->
-                            <h4 class="card-title">Steak Tacos</h4>
-                            <hr>
-                            <!--Text-->
-                            <p class="card-text">A Mexican dish consisting of a fried tortilla, typically folded, filled with various mixtures, such as seasoned meat, beans, lettuce, and tomatoes.</p>
-                        </div>
-                        <!--/.Card content-->
-
-                    </div>
-                    <!--/.Card-->
-                </div>
-                <!--Third columnn-->
-
-                <!--First columnn-->
-                <div class="col-lg-3">
-                    <!--Card-->
-                    <div class="card wow fadeInUp" data-wow-delay="0.6s">
-
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="http://images.shape.mdpcdn.com/sites/shape.com/files/styles/slide/public/healthy-chinese-food_0.jpg" class="img-fluid" alt="">
-                            <a>
-                                <div class="mask"></div>
-                            </a>
-                        </div>
-                        <!--/.Card image-->
-
-                        <!--Card content-->
-                        <div class="card-block text-xs-center">
-                            <!--Title-->
-                            <h4 class="card-title">Stir-Fry Noodles</h4>
-                            <hr>
-                            <!--Text-->
-                            <p class="card-text">Vegetables and meat cooked in a small amount of very hot oil while being stirred in a wok.</p>
-                        </div>
-                        <!--/.Card content-->
-
-                    </div>
-                    <!--/.Card-->
-                </div>
-                <!--First columnn-->
-            </div>
-
-        </section>
-        <!--/Section: Best features-->
-
-        <div class="divider-new">
-            <h2 class="h2-responsive wow fadeInUp">Contact us</h2>
-        </div>
-
-        <!--Section: Contact-->
-        <section id="contact">
-            <div class="row">
-                <!--First column-->
-                <div class="col-md-8">
-                    <div id="map-container" class="z-depth-1 wow fadeInUp" style="height: 300px"></div>
-                </div>
-                <!--/First column-->
-
-                <!--Second column-->
-                <div class="col-md-4">
-                    <ul class="text-xs-center">
-                        <li class="wow fadeInUp" data-wow-delay="0.2s"><i class="fa fa-map-marker"></i>
-                            <p>New York, NY 10021, USA</p>
-                        </li>
-
-                        <li class="wow fadeInUp" data-wow-delay="0.3s"><i class="fa fa-phone"></i>
-                            <p>+ 212 345 6789</p>
-                        </li>
-
-                        <li class="wow fadeInUp" data-wow-delay="0.4s"><i class="fa fa-envelope"></i>
-                            <p>jchua14@gmail.com</p>
-                        </li>
-                    </ul>
-                </div>
-                <!--/Second column-->
-            </div>
-        </section>
-        <!--Section: Contact-->
 
     </div>
     <!--/ Main container-->
